hdf5-derive/tests/compile-fail/pd-empty-struct.stderr
error: cannot derive `H5Type` for empty structs
 --> $DIR/pd-empty-struct.rs:9:8
  |
9 | struct Foo<T> {
  |        ^^^
